--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -1,73 +1,87 @@
 ---
-import svgNew from '../assets/new.svg'
+import svgNew from "../assets/new.svg"
 
 const testimonials = [
-  { 
-    comment: `“Design is a bridge that connects everyone and everything”`,
+  {
+    comment: `Product Analyst`,
     author: {
-      name: `Client Name`,
-      pos: `Project Manager, Company Name`,
-      pic: `https://images.pexels.com/photos/2709386/pexels-photo-2709386.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2`
+      name: `Tumipay`,
+      pos: `Jan 2025 - Current`,
+      pic: `https://colombiafintech.co/wp-content/uploads/2025/06/tumi_pay.png`,
     },
-    cls: `rotate-2 -translate-y-10`
-   },
-   { 
-    comment: `“Design is a bridge that connects everyone and everything”`,
+    cls: `rotate-2 -translate-y-10`,
+  },
+  {
+    comment: `Frontend Developer`,
     author: {
-      name: `Client Name`,
-      pos: `Project Manager, Company Name`,
-      pic: `https://images.pexels.com/photos/2128819/pexels-photo-2128819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2`
+      name: `Tumipay`,
+      pos: `Sept 2024 - Jan 2025`,
+      pic: `https://colombiafintech.co/wp-content/uploads/2025/06/tumi_pay.png`,
     },
-    cls: `-rotate-2 -translate-x-10  z-5`
-   },
-   { 
-    comment: `“Design is a bridge that connects everyone and everything”`,
+    cls: `-rotate-2 -translate-x-10  z-5`,
+  },
+  {
+    comment: `Frontend Engineer`,
     author: {
-      name: `Client Name`,
-      pos: `Project Manager, Company Name`,
-      pic: `https://images.pexels.com/photos/2169429/pexels-photo-2169429.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2`
+      name: `Professional Industrial Services`,
+      pos: `Aug 2023 - Sept 2024`,
+      pic: `https://s3.us-east-1.amazonaws.com/cdn.designcrowd.com/blog/75-generic-logos-to-impress-your-market/square-link-monoline-by-azus-brandcrowd.png`,
     },
-    cls: `rotate-2 translate-x-5 z-5`
-   },
-   { 
-    comment: `“Design is a bridge that connects everyone and everything”`,
+    cls: `rotate-2 translate-x-5 z-5`,
+  },
+  {
+    comment: `Frontend Intern `,
     author: {
-      name: `Client Name`,
-      pos: `Project Manager, Company Name`,
-      pic: `https://images.pexels.com/photos/3586798/pexels-photo-3586798.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2`
+      name: `Softserve Project Lab`,
+      pos: `Dec 2022 - Mar 2023`,
+      pic: `https://media.licdn.com/dms/image/v2/D4D0BAQGtV44Uyhqr1w/company-logo_200_200/company-logo_200_200/0/1689185073400/softserve_logo?e=2147483647&v=beta&t=G0pHMiyuCarTOiWV7kqnx2fJNy6g5p4_Tjx7BclWCYs`,
     },
-    cls: `-rotate-2 translate-y-10 md:translate-y-15`
-   },
+    cls: `-rotate-2 translate-y-10 md:translate-y-15`,
+  },
 ]
 ---
 
-
 <section>
-    <div class="max-w-4xl mx-auto pb-20 px-10 overflow-hidden">
-      <div class="grid grid-cols-1 md:grid-cols-2">
-        <div class="flex relative">
-          <h1 class="text-3xl">Here’s what my clients are saying about my work</h1>
-          <img src={svgNew.src} alt="arrow" width="40" class="absolute -right-3 md:-right-10 bottom-0" />
-        </div>
+  <div class="max-w-4xl mx-auto pb-20 px-10 overflow-hidden">
+    <div class="grid grid-cols-1 md:grid-cols-2">
+      <div class="flex relative">
+        <h1 class="text-3xl">
+          My experience
+        </h1>
+        <img
+          src={svgNew.src}
+          alt="arrow"
+          width="40"
+          class="absolute -right-3 md:-right-10 bottom-0"
+        />
       </div>
-  
-  
-      <div class="grid grid-cols-1 md:grid-cols-2 py-30">
-        {testimonials.map(item => ( 
-          <div class={`flex flex-col gap-3 p-5 pr-15 bg-white border-2 shadow-[6px_6px_0px_rgba(0,0,0,0.3)] ${item.cls}`}>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 py-30">
+      {
+        testimonials.map((item) => (
+          <div
+            class={`flex flex-col gap-3 p-5 pr-15 bg-white border-2 shadow-[6px_6px_0px_rgba(0,0,0,0.3)] ${item.cls}`}
+          >
             <p>{item.comment}</p>
             <div class="flex items-center gap-2">
-              <div><div class="size-11 rounded-full border overflow-hidden">
-                  <img src={item.author.pic} alt="" class="w-full h-full object-cover" />
-              </div></div>
+              <div>
+                <div class="size-11 rounded-full border overflow-hidden">
+                  <img
+                    src={item.author.pic}
+                    alt=""
+                    class="w-full h-full object-cover"
+                  />
+                </div>
+              </div>
               <div>
                 <h3 class="font-medium">{item.author.name}</h3>
                 <p>{item.author.pos}</p>
               </div>
             </div>
           </div>
-        ))}
-      </div>
-  
+        ))
+      }
     </div>
-   </section>
+  </div>
+</section>
