--- a/src/components/Tools.astro
+++ b/src/components/Tools.astro
@@ -1,6 +1,6 @@
 ---
 const mytools = [
-  'Figma', 'Framer', 'Webflow', 'Notion', 'Lottie', 'Canva', 'Sketch', 'Shopify', 'Photoshop', 'Adobe XD', 'Miro'
+  'Figma', 'React', 'Next', 'Tailwind', 'Javascript', 'Python', 'Zustand', 'TanStack Query', 'Supabase', 'Airtable', 'Notion'
 ]
 --- 
 <script>
