--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,34 +1,35 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Angie Portfolio</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmhYuE7PduOt2L1T7Z0Y3ptu524fmI-JEajg&s"
+    />
+    <meta name="generator" content={Astro.generator} />
+    <title>Tiff Portfolio</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 
 <style>
+  :root {
+    --main-bg: #fefff0;
+    --blue: #bae6ff;
+    --yellow: #ffdc58;
+  }
 
-:root{
-	--main-bg: #FEFFF0;
-	--blue: #BAE6FF;
-	--yellow: #FFDC58;
-}
-
-html,
-body {
-	margin: 0;
-	width: 100%;
-	height: 100%;
-	background-color: var(--main-bg);
-	font-family: "Space Grotesk", sans-serif;
-	scroll-behavior: smooth;
-}
-
-
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-bg);
+    font-family: "Space Grotesk", sans-serif;
+    scroll-behavior: smooth;
+  }
 </style>
